--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGO_URI = mongodb+srv://Sang:nsang2003@cluster0.j1echzl.mongodb.net/?retryWrites=true&w=majority
 PORT = 5000
+JWT_SECRET = helloworld
